index.css
/*
COLOR PALETTE

BLACK: #201A23
WHITE: #FBFBFB
DARK: #44354A
COLOR: #9E4770

LIGHT MODE
BLACK: #ddd6e0
LIGHT: #bfafc6
*/



body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif; 
    color: #FBFBFB;
    background: #201A23;
} 

.salesboard {
    text-align: center;
    max-width: 940px;
    margin: 0 auto;
    padding: 0 15rem;
}

img {
    border: 10px solid #44354A;
    border-radius: 50%;
    width: 220px;
    margin-bottom: 25px;
}

/*Buttons*/
button {
    background: #9E4770;
    height: 80px;
    width: 190px;
    font-size: 45px;
    border: 0;
    border-radius: 10px;
    cursor: pointer;
}

button:active {
    scale: 0.98;
}

i.fa-solid {
    position: absolute;
    top: 1rem;
    right: 15rem;
    font-size: 1.5rem;
    line-height: 1.4;
    width: 2rem;
    height: 2rem;
    background: #44354A;
    color: #FBFBFB;
    padding: 0.5rem;
    border-radius: 50%;
    cursor: pointer;
}

/*Headings*/
h3 {
    font-size: 1.5rem;
    margin-bottom: 5px;
}

/*Containers*/
.bar {
    background: #44354A;
    border-radius: 2.5rem;
    font-size: 2rem;
    line-height: 3.5rem;
    min-height: 3.5rem;
}

#sales-bar,
#achievements-bar {
    text-align: left;
    padding: 5px 1.5rem;
}

.product-btn-container,
.revenue-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.total-revenue,
.total-commission {
    width: 100%;
}

.revenue-bar,
.commission-bar {
    height: 5rem;
    border-radius: 5rem;
    line-height: 2;
    font-size: 2.5rem;
}


/*Light mode*/
.light {
    background: #bfafc6;
    color: #44354A;
}

body.light img {
    border: 10px solid #a791b1;
}

body.light button {
    background: #B86089;
}

body.light .bar {
    background: #a791b1;
}

